Fix edge button alignment

--- a/resources/scss/_buttons.scss
+++ b/resources/scss/_buttons.scss
@@ -90,7 +90,7 @@ input[type="file"] {
     float: right;
     position: relative;
     top: 1rem;
-    left: 8.8rem;
+    left: 8.35rem;
 }
 
 /*
